@@ -1,9 +1,4 @@
-/* $RCSfile$
- * $Author$
- * $Date$
- * $Revision$
- *
- * Copyright (C) 2001-2007  The Chemistry Development Kit (CDK) project
+/* Copyright (C) 2001-2007  The Chemistry Development Kit (CDK) project
  * 
  * Contact: cdk-devel@lists.sourceforge.net
  * 
@@ -38,6 +33,7 @@ import org.openscience.cdk.io.formats.IResourceFormat;
 import org.openscience.cdk.io.formats.ZMatrixFormat;
 
 import javax.vecmath.Point3d;
+
 import java.io.*;
 import java.util.StringTokenizer;
 
@@ -95,7 +91,7 @@ public class ZMatrixReader extends DefaultChemObjectReader {
     }
 
 	@TestMethod("testAccepts")
-    public boolean accepts(Class classObject) {
+    public boolean accepts(Class<? extends IChemObject> classObject) {
         return IChemFile.class.isAssignableFrom(classObject);
 	}
 
@@ -187,27 +183,27 @@ public class ZMatrixReader extends DefaultChemObjectReader {
             {
               types[i] = tokenizer.nextToken();
               d_atom[i] = Integer.valueOf(tokenizer.nextToken()) -1;
-              d[i] = new Double(tokenizer.nextToken());
+              d[i] = Double.valueOf(tokenizer.nextToken());
               i++;
             }
             else if (i==2)
             {
               types[i] = tokenizer.nextToken();
               d_atom[i] = Integer.valueOf(tokenizer.nextToken()) -1;
-              d[i] = new Double(tokenizer.nextToken());
-              a_atom[i] = new Integer(tokenizer.nextToken()) -1;
-              a[i] = new Double(tokenizer.nextToken());
+              d[i] = Double.valueOf(tokenizer.nextToken());
+              a_atom[i] = Integer.valueOf(tokenizer.nextToken()) -1;
+              a[i] = Double.valueOf(tokenizer.nextToken());
               i++;
             }
             else
             {
               types[i] = tokenizer.nextToken();
-              d_atom[i] = new Integer(tokenizer.nextToken()) -1;
-              d[i] = new Double(tokenizer.nextToken());
-              a_atom[i] = new Integer(tokenizer.nextToken()) -1;
-              a[i] = new Double(tokenizer.nextToken());
-              da_atom[i] = new Integer(tokenizer.nextToken()) -1;
-              da[i] = new Double(tokenizer.nextToken());
+              d_atom[i] = Integer.valueOf(tokenizer.nextToken()) -1;
+              d[i] = Double.valueOf(tokenizer.nextToken());
+              a_atom[i] = Integer.valueOf(tokenizer.nextToken()) -1;
+              a[i] = Double.valueOf(tokenizer.nextToken());
+              da_atom[i] = Integer.valueOf(tokenizer.nextToken()) -1;
+              da[i] = Double.valueOf(tokenizer.nextToken());
               i++;
             }
           }
