@@ -1,9 +1,4 @@
-/*  $RCSfile$
- *  $Author$
- *  $Date$
- *  $Revision$
- *
- *  Copyright (C) 2003-2007  The Chemistry Development Kit (CDK) project
+/* Copyright (C) 2003-2007  The Chemistry Development Kit (CDK) project
  *
  *  Contact: cdk-devel@lists.sourceforge.net
  *
@@ -918,7 +913,7 @@ public class AtomPlacer
         int[] weights = getWeightNumbers(ac);
         for (int f = 0; f < ac.getAtomCount(); f++)
         {
-            ac.getAtom(f).setProperty("Weight", new Integer(weights[f]));
+            ac.getAtom(f).setProperty("Weight", Integer.valueOf(weights[f]));
         }
     }
 
